Fix progress bar overflowing on tall screens (#1304)
* Fix progress bar overflowing on tall screens

* Adds changelog

---------

--- a/app/css/commons.css
+++ b/app/css/commons.css
@@ -168,7 +168,7 @@ a {
 progress {
   -webkit-appearance: none;
   height: 6px;
-  width: 50vh;
+  width: min(50vw, 50vh);
 }
 
 progress[value]::-webkit-progress-bar {
